// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots customized styles item style 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        style={
          Object {
            "outline": "1px solid red",
          }
        }
        tabIndex="0"
      >
        One item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        style={
          Object {
            "outline": "1px solid blue",
          }
        }
        tabIndex="0"
      >
        Two item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        style={
          Object {
            "outline": "1px solid green",
          }
        }
        tabIndex="0"
      >
        Three item
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled item 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Enabled
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-te33w8=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Disabled
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Enabled
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-te33w8=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Disabled
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled links 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <a
        aria-haspopup={false}
        data-css-1qr74j9=""
        href="https://duck.com"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Enabled
      </a>
    </div>
    <div
      data-css-13azwyo=""
    >
      <a
        aria-haspopup={false}
        data-css-te33w8=""
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Disabled
      </a>
    </div>
    <div
      data-css-13azwyo=""
    >
      <a
        aria-haspopup={false}
        data-css-1stw8mg=""
        href="https://duck.com"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Enabled
      </a>
    </div>
    <div
      data-css-13azwyo=""
    >
      <a
        aria-haspopup={false}
        data-css-te33w8=""
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Disabled
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled multiple, all disabled 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-te33w8=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Mult 1, disabled
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-te33w8=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Mult 2, disabled
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled nested 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Enabled
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={true}
        data-css-1cqpicl=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Nested but disabled
        <div
          data-css-14lvci6=""
        >
          <svg
            height="9"
            viewBox="0 0 4 9"
            width="4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 .33l3.657 4.15L0 8.634V.33"
              data-css-c4d79v=""
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled single, disabled 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-te33w8=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Single, disabled
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots dividers edge 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        One item
      </button>
    </div>
    <div
      data-css-rficis=""
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`Storyshots dividers sandwich 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        One item
      </button>
    </div>
    <div
      data-css-rficis=""
      tabIndex="-1"
    />
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Two item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Three item
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots link a w/ href 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <a
        aria-haspopup={false}
        data-css-1qr74j9=""
        href="https://duckduckgo.com"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Links to web
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items long text 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        One item that has text that goes on forever and onward into the universes yet to be
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Another item that takes a long time to explain in the context of everything that is in a line.
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items long text with icon 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-cskk43=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <div
          data-css-18rfdc6=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="channel icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M13 13.855V23h-2v-9.145A3.501 3.501 0 0112 7a3.5 3.5 0 011 6.855zM5.041 1.344l1.21 1.592C3.971 4.672 2.5 7.414 2.5 10.5s1.472 5.829 3.751 7.564l-1.21 1.592A11.482 11.482 0 01.5 10.5c0-3.736 1.781-7.056 4.541-9.156zm13.918 0c2.76 2.1 4.541 5.42 4.541 9.156 0 3.736-1.781 7.056-4.541 9.156l-1.21-1.592c2.28-1.736 3.751-4.478 3.751-7.564s-1.472-5.829-3.751-7.564l1.21-1.592zM7.462 4.529l1.21 1.592A5.492 5.492 0 006.5 10.5a5.49 5.49 0 002.172 4.379l-1.21 1.593A7.488 7.488 0 014.5 10.5a7.488 7.488 0 012.962-5.971zm9.076 0c1.8 1.37 2.962 3.534 2.962 5.971s-1.162 4.602-2.962 5.971l-1.21-1.592A5.49 5.49 0 0017.5 10.5a5.49 5.49 0 00-2.172-4.379l1.21-1.593zM12 12a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
              />
            </svg>
          </div>
        </div>
        One item that has text that goes on forever and onward into the universes yet to be
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items multiple 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        One item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Two item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Three item
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items null item 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        One item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Skip to three item
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items one 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        One item
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items with icons 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-cskk43=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <div
          data-css-18rfdc6=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="channel icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M13 13.855V23h-2v-9.145A3.501 3.501 0 0112 7a3.5 3.5 0 011 6.855zM5.041 1.344l1.21 1.592C3.971 4.672 2.5 7.414 2.5 10.5s1.472 5.829 3.751 7.564l-1.21 1.592A11.482 11.482 0 01.5 10.5c0-3.736 1.781-7.056 4.541-9.156zm13.918 0c2.76 2.1 4.541 5.42 4.541 9.156 0 3.736-1.781 7.056-4.541 9.156l-1.21-1.592c2.28-1.736 3.751-4.478 3.751-7.564s-1.472-5.829-3.751-7.564l1.21-1.592zM7.462 4.529l1.21 1.592A5.492 5.492 0 006.5 10.5a5.49 5.49 0 002.172 4.379l-1.21 1.593A7.488 7.488 0 014.5 10.5a7.488 7.488 0 012.962-5.971zm9.076 0c1.8 1.37 2.962 3.534 2.962 5.971s-1.162 4.602-2.962 5.971l-1.21-1.592A5.49 5.49 0 0017.5 10.5a5.49 5.49 0 00-2.172-4.379l1.21-1.593zM12 12a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
              />
            </svg>
          </div>
        </div>
        One item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1i348gf=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <div
          data-css-18rfdc6=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="path icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.411 10l3.586 3.586V22H6l-.003-7.586L3 11.417V14H1V8h6v2H4.411zM21 11.414l-3 3V22h-2v-8.414L19.586 10H17V8h6v6h-2v-2.586zm-8-5.588V22h-2V5.831L9.174 7.657 7.76 6.242 12.003 2l4.242 4.243-1.414 1.414L13 5.826z"
              />
            </svg>
          </div>
        </div>
        Two item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1i348gf=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <div
          data-css-18rfdc6=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="report icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M22 11c0-.551-.448-1-1-1h-4c-.552 0-1 .449-1 1v9h-1v-4c0-.551-.448-1-1-1h-4c-.552 0-1 .449-1 1v4H8v-7c0-.551-.448-1-1-1H3c-.552 0-1 .449-1 1v7H0v2h24v-2h-2v-9zM4 20v-6h2v6H4zm7 0v-3h2v3h-2zm7 0v-8h2v8h-2zM5 9a2 2 0 111.999-2.008l4.002 2.286C11.296 9.106 11.635 9 12 9c.178 0 .347.031.511.074l4.563-4.562A1.997 1.997 0 0117 4a2 2 0 112 2c-.178 0-.348-.029-.512-.073l-4.562 4.562c.043.165.074.333.074.511a2 2 0 01-3.999.01L5.999 8.724A1.976 1.976 0 015 9z"
              />
            </svg>
          </div>
        </div>
        Three item
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin bottomLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "bottom": 20,
        "left": 20,
        "position": "absolute",
      }
    }
  >
    <div
      data-css-ldprua=""
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={true}
          data-css-gp2zet=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          One
          <div
            data-css-14lvci6=""
          >
            <svg
              height="9"
              viewBox="0 0 4 9"
              width="4"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 .33l3.657 4.15L0 8.634V.33"
                data-css-c4d79v=""
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={false}
          data-css-1stw8mg=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          Two
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin bottomRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "bottom": 20,
        "position": "absolute",
        "right": 20,
      }
    }
  >
    <div
      data-css-10akat2=""
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={true}
          data-css-gp2zet=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          One
          <div
            data-css-14lvci6=""
          >
            <svg
              height="9"
              viewBox="0 0 4 9"
              width="4"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 .33l3.657 4.15L0 8.634V.33"
                data-css-c4d79v=""
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={false}
          data-css-1stw8mg=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          Two
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin topLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "left": 20,
        "position": "absolute",
        "top": 20,
      }
    }
  >
    <div
      data-css-13za233=""
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={true}
          data-css-gp2zet=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          One
          <div
            data-css-14lvci6=""
          >
            <svg
              height="9"
              viewBox="0 0 4 9"
              width="4"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 .33l3.657 4.15L0 8.634V.33"
                data-css-c4d79v=""
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={false}
          data-css-1stw8mg=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          Two
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin topRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "position": "absolute",
        "right": 20,
        "top": 20,
      }
    }
  >
    <div
      data-css-ib4mvs=""
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={true}
          data-css-gp2zet=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          One
          <div
            data-css-14lvci6=""
          >
            <svg
              height="9"
              viewBox="0 0 4 9"
              width="4"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 .33l3.657 4.15L0 8.634V.33"
                data-css-c4d79v=""
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={false}
          data-css-1stw8mg=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          Two
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots onClick flat 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        One item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Two item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Three item
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots onClick nested 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1qr74j9=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        0
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={true}
        data-css-mnl06t=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        1
        <div
          data-css-14lvci6=""
        >
          <svg
            height="9"
            viewBox="0 0 4 9"
            width="4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 .33l3.657 4.15L0 8.634V.33"
              data-css-c4d79v=""
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        2
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        3
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        4
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        5
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        6
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        7
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        8
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        9
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        10
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        11
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        12
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots shouldFocusOnMount false 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-13za233=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        One item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Two item
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1stw8mg=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        Three item
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots with Position BelowLeft 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "16px",
      }
    }
  >
    <div
      style={
        Object {
          "background": "pink",
          "display": "inline-block",
          "padding": "4px",
        }
      }
    >
      anchor
    </div>
    <div
      style={
        Object {
          "background": "pink",
          "display": "inline-block",
          "left": "0px",
          "padding": "4px",
          "position": "absolute",
          "top": "12px",
        }
      }
    >
      <div
        data-css-13za233=""
        onKeyDown={[Function]}
        role="menu"
      >
        <div
          data-css-13azwyo=""
        >
          <button
            aria-haspopup={false}
            data-css-1stw8mg=""
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="menuitem"
            tabIndex="0"
          >
            One item
          </button>
        </div>
        <div
          data-css-13azwyo=""
        >
          <button
            aria-haspopup={false}
            data-css-1stw8mg=""
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="menuitem"
            tabIndex="0"
          >
            Two item
          </button>
        </div>
        <div
          data-css-13azwyo=""
        >
          <button
            aria-haspopup={false}
            data-css-1stw8mg=""
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="menuitem"
            tabIndex="0"
          >
            Three item
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots with Position BelowRight 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "float": "right",
        "margin": "16px",
      }
    }
  >
    <div
      style={
        Object {
          "background": "pink",
          "display": "inline-block",
          "padding": "4px",
        }
      }
    >
      anchor
    </div>
    <div
      style={
        Object {
          "background": "pink",
          "display": "inline-block",
          "left": "0px",
          "padding": "4px",
          "position": "absolute",
          "top": "12px",
        }
      }
    >
      <div
        data-css-ib4mvs=""
        onKeyDown={[Function]}
        role="menu"
      >
        <div
          data-css-13azwyo=""
        >
          <button
            aria-haspopup={false}
            data-css-1stw8mg=""
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="menuitem"
            tabIndex="0"
          >
            One item
          </button>
        </div>
        <div
          data-css-13azwyo=""
        >
          <button
            aria-haspopup={false}
            data-css-1stw8mg=""
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="menuitem"
            tabIndex="0"
          >
            Two item
          </button>
        </div>
        <div
          data-css-13azwyo=""
        >
          <button
            aria-haspopup={false}
            data-css-1stw8mg=""
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseOver={[Function]}
            role="menuitem"
            tabIndex="0"
          >
            Three item
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
